<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsActivity"
    android:orientation="vertical"
    android:background="@color/AppBackground"
    android:id="@+id/DrawerView5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Header-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/AppFirstColor"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/irsans_b"
                android:text="@string/HeaderText"
                android:textColor="@color/TextColorWhite"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/DrawerBtn"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:src="@mipmap/menu" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:background="@mipmap/me"/>
            
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/Aboutme"
                android:textColor="#000"
                android:gravity="center"
                android:fontFamily="@font/irsans_m"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/rahim"
                android:textColor="#610303"
                android:gravity="center"
                android:fontFamily="@font/irsans_m"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>


        </LinearLayout>

    </LinearLayout>

    <fragment
        class="com.sherko.daneshgahazadboukan.feregment_meno"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:background="@color/AppBackground"
        android:orientation="vertical">
    </fragment>


</android.support.v4.widget.DrawerLayout>